Phase 3: Update documentation for v2.0.0
- Update TRAINING_GUIDE.md section 4.4 with cluster support details
- Remove TRAINING_GUIDE.md section 4.10 (cluster command)
- Renumber security section from 4.11 to 4.10
- Add --nodes option to bash completion script
- Add --nodes option to zsh completion script
- Update man page test-connection description
- Create CHANGELOG.md with v2.0.0 breaking changes and migration guide

Documentation now reflects:
- Unified test-connection command for all connectivity testing
- Cluster URI auto-detection (neo4j:// scheme)
- Explicit multi-node testing with --nodes option

--- a/scripts/loopy.1
+++ b/scripts/loopy.1
@@ -59,7 +59,7 @@ Validate configuration file without running the test. Checks configuration synta
 Run predefined benchmark scenarios. Execute standardized performance tests for comparison.
 .TP
 .B test\-connection
-Test Neo4j connectivity and perform diagnostics. Verify database connectivity and permissions.
+Test Neo4j connectivity (single node or cluster) and perform diagnostics. Verify database connectivity, permissions, and cluster member availability. Automatically detects cluster URIs (neo4j://) and supports testing multiple nodes with the --nodes option.
 .TP
 .B setup
 Interactive setup wizard for guided configuration creation. Step-by-step configuration generation.
